--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,7 +20,7 @@
 <meta name="msapplication-TileColor" content="#2b5797">
 <meta name="theme-color" content="#ffffff">
 
-  <title>CRM | Kasper Infotech</title>
+  <title>UPBS-Technology</title>
 </head>
 
 <body>
